# document_microservice

./: .dockerignore  .gitignore  Cargo.toml  DEV  Dockerfile  Makefile  README.md
demo_template/: demo.tex
src/: document.rs  main.rs  number_text.rs
src/provider/: cash_in.rs  cash_out.rs  mod.rs
src/templates/: cash_in.rs  mod.rs
src/templates/latex/cash_in/: cash_in.cls
templates/: cash_in.rs  cash_in.tex  mod.rs
templates/cash_in/: template.tex  template.text
templates/cash_out/: cash_out.tex  template.text
templates/latex/cash_in/: cash_in.tex
