[package]
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
name = "document_microservice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gzlib = "*"
handlebars = "*"
# packman = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
tempdir = "*"
