[package]
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
name = "document_microservice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gzlib = "*"
handlebars = "*"
# packman = "*"
base64 = "0.13.0"
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
tempdir = "*"
tokio = {version = "0.2", features = ["full"]}
tonic = "0.3"
